--- a/defaultConfiguration/auth-server/templates/web/login.html
+++ b/defaultConfiguration/auth-server/templates/web/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
