--- a/defaultConfiguration/auth-server/resources/css/style.css
+++ b/defaultConfiguration/auth-server/resources/css/style.css
@@ -1,7 +1,7 @@
 body {
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #eee;
+	padding-top: 40px;
+	padding-bottom: 40px;
+	background-color: #eee;
 }
 
 .info-container {
@@ -9,62 +9,72 @@ body {
 	padding: 0px 15px;
 	margin: 0 auto;
 }
+
 .form-signin {
-  max-width: 330px;
-  padding: 15px;
-  margin: 0 auto;
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
 }
-.form-signin-heading{
-  text-align: left;
-  padding: 3px;
-  border-bottom: 1px solid gray; 
+
+.form-signin-heading {
+	text-align: left;
+	padding: 3px;
+	border-bottom: 1px solid gray;
 }
-.alert{
-	-moz-border-radius: 4px;-webkit-border-radius: 4px;border-radius: 4px;
+
+.alert {
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
 	margin-bottom: 0px;
 	text-align: center;
 }
+
 .form-signin .checkbox {
-  margin-bottom: 10px;
+	margin-bottom: 10px;
 }
+
 .form-signin .checkbox {
-  font-weight: normal;
+	font-weight: normal;
 }
+
 .form-signin .form-control {
-  position: relative;
-  height: auto;
-  -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-  padding: 10px;
-  font-size: 16px;
+	position: relative;
+	height: auto;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding: 10px;
+	font-size: 16px;
 }
+
 .form-signin .form-control:focus {
-  z-index: 2;
+	z-index: 2;
 }
+
 .form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
+	margin-bottom: -1px;
+	border-bottom-right-radius: 0;
+	border-bottom-left-radius: 0;
 }
+
 .form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+	margin-bottom: 10px;
+	border-top-left-radius: 0;
+	border-top-right-radius: 0;
 }
-#confirm-container{
+
+#confirm-container {
 	width: 450px;
 	margin: 0 auto;
 }
-#confirmation-form,
-#denial-form{
+
+#confirmation-form,#denial-form {
 	padding: 5px;
 	float: left;
 	margin: 10px;
 }
 
-#confirmation-form button,
-#denial-form button {
+#confirmation-form button,#denial-form button {
 	padding: 5px;
 }
-
