--- a/defaultConfiguration/auth-server/templates/web/login.html
+++ b/defaultConfiguration/auth-server/templates/web/login.html
@@ -45,20 +45,21 @@
 	        </div>
         </div>
         
-		<form th:action="@{/login}" class="form-signin" method="post" role="form">
-			<select name="loginModus" class="form-control">
-<!--             	<option th:each="loginModus : ${loginModi}" -->
-<!--                 	    th:value="${#strings.toLowerCase(loginModus)}" -->
-<!--                   	    th:text="#{${'login.modus.' + #strings.toLowerCase(loginModus)}}">Modus</option> -->
-                <option th:value="normal"
-                  	    th:text="#{login.modus.normal}"
-                  	    th:selected="selected">Normaler Login</option>
+		<form th:action="@{/login/check}" class="form-signin" method="post" role="form">
+			<select name="provider"
+					class="form-control"
+					th:if="${isLdapConfigured}">
+                <option th:value="internal"
+                  	    th:text="#{login.modus.internal}"
+                  	    th:selected="${#httpSession.getAttribute('LAST_PROVIDER') == 'internal'}">Internal login</option>
           	    <option th:value="ldap"
-                  	    th:text="#{login.modus.ldap}">Login mit LDAP</option>
+                  	    th:text="#{login.modus.ldap}"
+                  	    th:selected="${#httpSession.getAttribute('LAST_PROVIDER') == 'ldap'}">Login with LDAP</option>
         	</select>
-			<input id="j_username" name="j_username" type="text"
-				   class="form-control" th:placeholder="#{login.username}" />
-			<input id="j_password" name="j_password" type="password"
+			<input id="username" name="username" type="text"
+				   class="form-control" th:placeholder="#{login.username}"
+				   th:value="${#httpSession.getAttribute('LAST_USERNAME')}"/>
+			<input id="password" name="password" type="password"
 				   class="form-control" th:placeholder="#{login.password}" />
 			<button class="btn btn-lg btn-primary btn-block" type="submit"
 				th:text="#{login.signin}">Sign in</button>
